# parallel-video-io

./: .gitignore  BUGS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmark/: README.md  __init__.py  analysis.py  bench_encode.py  bench_loading.py  bench_random.py  bench_read.py  bench_sequential.py  bench_write.py  bench_write_pareto.py  common.py  config.py  datagen.py  loc.py  plots.py  run_all.py
benchmark/backends/: __init__.py  decode.py  encode.py  loaders.py  read.py  write.py
benchmark/results/: SUMMARY.md
benchmark/results/figures/: decode_throughput.html  encode_matched.html  encode_quality.html
benchmark/snippets/encode/: opencv.py  pvio_cpu.py  pvio_gpu.py  pyav.py
benchmark/snippets/loading/: dali.py  pvio.py  torchcodec_naive.py
benchmark/snippets/random/: decord.py  opencv.py  pvio_cpu.py  pvio_gpu.py  pyav.py  torchcodec.py
benchmark/snippets/read_random/: decord.py  opencv.py  pvio.py  pyav.py  torchcodec.py
benchmark/snippets/read_sequential/: decord.py  opencv.py  pvio.py  pyav.py  torchcodec.py
benchmark/snippets/sequential/: dali.py  decord.py  opencv.py  pvio_cpu.py  pvio_gpu.py  pyav.py  torchcodec.py
benchmark/snippets/write/: opencv.py  pvio.py  pyav.py
docs/: benchmark.md  cli.md  developer.md  examples.md  index.md  installation.md
docs/api/: io.md  torch_tools.md  video.md
src/pvio/: __init__.py  _accel.py  cli.py  h5_writer.py  io.py  torch.py  torch_tools.py  util.py  video.py  video_io.py
tests/: test_cli.py  test_h5_writer.py  test_integration.py  test_io.py  test_public_api.py  test_readme_examples.py  test_torch.py  test_torch_tools.py  test_util.py  test_utils.py  test_video_io.py
