[project]
name = "parallel-video-io"
version = "0.1.5"
description = "Tools for reading and writing videos, and loading them efficiently with PyTorch."
authors = [
    { name = "Sibo Wang-Chen", email = "wangchensibo@epfl.ch" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
classifiers = [
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch==2.9.*",          # specific to torchcodec 0.8
    "imageio[tifffile]>=2.37.0,<3",
    "imageio-ffmpeg==0.6.0",
    "torchcodec==0.8.*",    # specific to torch 2.9
    "joblib>=1.5.1,<2",
    "tqdm>=4.67,<5",
    "numpy>=2.0,<3",
    "pytest>=8.4.2,<9",
]

[project.urls]
Repository = "https://github.com/sibocw/parallel-video-io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvio"]
