[project]
name = "parallel-video-io"
version = "0.1.6"
description = "Tools for reading and writing videos, and loading them efficiently with PyTorch."
authors = [
    { name = "Sibo Wang-Chen", email = "wangchensibo@epfl.ch" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [ "Operating System :: POSIX :: Linux" ]
requires-python = ">=3.10,<3.15"
dependencies = [
    # Up until torchcodec 0.11, torchcodec minor versions are tied to specific
    # torch minor versions. Versions since 0.12 support torch 2.11 or later.
    # We therefore require these newer versions for both.
    "torch>=2.11,<2.13",
    "torchcodec>=0.12,<0.15",
    # Image/video IO - might migrate to pyav etc. as is convenient 
    "imageio[tifffile]>=2.37.0,<3.0",
    "imageio-ffmpeg==0.6.0",
    # Parallelization
    "joblib>=1.5,<2.0",
    # Genereal stuff
    "tqdm>=4.67,<5.0",
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "ruff>=0.15",
    # For docs
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.29",
]

[project.urls]
Repository = "https://github.com/sibocw/parallel-video-io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvio"]
